Finish the character level lstm notebook

--- a/2_Character_Model_with_Basic_RNN.ipynb
+++ b/2_Character_Model_with_Basic_RNN.ipynb
@@ -543,8 +543,7 @@
     "\n",
     "    def init_hidden(self, batch_size):\n",
     "        # This method generates the first hidden state of zeros which we'll use in the forward pass\n",
-    "        hidden = torch.zeros(self.n_layers, batch_size,\n",
-    "                             self.hidden_dim).to(device)\n",
+    "        hidden = torch.zeros(self.n_layers, batch_size, self.hidden_dim).to(device)\n",
     "        # We'll send the tensor holding the hidden state to the device we specified earlier as well\n",
     "        return hidden"
    ]
@@ -570,8 +569,7 @@
    "outputs": [],
    "source": [
     "# Instantiate the model with hyperparameters\n",
-    "model = Model(input_size=dict_size, output_size=dict_size,\n",
-    "              hidden_dim=12, n_layers=1)\n",
+    "model = Model(input_size=dict_size, output_size=dict_size, hidden_dim=12, n_layers=1)\n",
     "# We'll also set the model to the device that we defined earlier (default is CPU)\n",
     "model = model.to(device)\n",
     "\n",
