--- a/3_LSTM_Structure.ipynb
+++ b/3_LSTM_Structure.ipynb
@@ -251,7 +251,7 @@
     "out, hidden = lstm(inputs, (h0, c0))\n",
     "\n",
     "print(\"out: \\n\", out, out.shape)\n",
-    "print(\"hidden: \\n\", hidden, hidden[0].shape)\n"
+    "print(\"hidden: \\n\", hidden, hidden[0].shape)"
    ]
   },
   {
