--- a/5_Character Level LSTM.ipynb
+++ b/5_Character Level LSTM.ipynb
@@ -53,7 +53,7 @@
    "outputs": [],
    "source": [
     "# open text file and read in data as `text`\n",
-    "with open(os.path.join(\"data\",\"anna.txt\"), \"r\") as f:\n",
+    "with open(os.path.join(\"data\", \"anna.txt\"), \"r\") as f:\n",
     "    text = f.read()"
    ]
   },
@@ -691,9 +691,9 @@
     "            loss = criterion(output, targets.view(n_seqs * n_steps))\n",
     "\n",
     "            loss.backward()\n",
-    "            \n",
+    "\n",
     "            losses.append(loss.item())\n",
-    "            \n",
+    "\n",
     "            # `clip_grad_norm` helps prevent the exploding gradient problem in RNNs / LSTMs.\n",
     "            nn.utils.clip_grad_norm_(net.parameters(), clip)\n",
     "\n",
@@ -722,8 +722,7 @@
     "                    targets = targets.long()\n",
     "\n",
     "                    output, val_h = net.forward(inputs, val_h)\n",
-    "                    val_loss = criterion(\n",
-    "                        output, targets.view(n_seqs * n_steps))\n",
+    "                    val_loss = criterion(output, targets.view(n_seqs * n_steps))\n",
     "\n",
     "                    val_losses.append(val_loss.item())\n",
     "\n",
@@ -1459,7 +1458,7 @@
    ],
    "source": [
     "# Here we have loaded in a model that trained over 1 epoch `rnn_1_epoch.net`\n",
-    "with open(os.path.join(\"models\",\"rnn_1_epoch.net\"), \"rb\") as f:\n",
+    "with open(os.path.join(\"models\", \"rnn_1_epoch.net\"), \"rb\") as f:\n",
     "    checkpoint = torch.load(f)\n",
     "\n",
     "loaded = CharRNN(\n",
