--- a/4_LSTM_Training_Part_of_Speech_Tagging.ipynb
+++ b/4_LSTM_Training_Part_of_Speech_Tagging.ipynb
@@ -67,12 +67,10 @@
    "source": [
     "# training sentences and their corresponding word-tags\n",
     "training_data = [\n",
-    "    (\"The cat ate the cheese\".lower().split(),\n",
-    "     [\"DET\", \"NN\", \"V\", \"DET\", \"NN\"]),\n",
+    "    (\"The cat ate the cheese\".lower().split(), [\"DET\", \"NN\", \"V\", \"DET\", \"NN\"]),\n",
     "    (\"She read that book\".lower().split(), [\"NN\", \"V\", \"DET\", \"NN\"]),\n",
     "    (\"The dog loves art\".lower().split(), [\"DET\", \"NN\", \"V\", \"NN\"]),\n",
-    "    (\"The elephant answers the phone\".lower().split(),\n",
-    "     [\"DET\", \"NN\", \"V\", \"DET\", \"NN\"]),\n",
+    "    (\"The elephant answers the phone\".lower().split(), [\"DET\", \"NN\", \"V\", \"DET\", \"NN\"]),\n",
     "]"
    ]
   },
@@ -232,7 +230,9 @@
     "        )\n",
     "\n",
     "        # get the scores for the most likely tag for a word\n",
-    "        tag_outputs = self.hidden2tag(lstm_out.view(len(sentence), -1)) # (seq_len, batch, hidden) -> (seq_len*batch, hidden) -> (seq_len*batch, tag_size)\n",
+    "        tag_outputs = self.hidden2tag(\n",
+    "            lstm_out.view(len(sentence), -1)\n",
+    "        )  # (seq_len, batch, hidden) -> (seq_len*batch, hidden) -> (seq_len*batch, tag_size)\n",
     "        tag_scores = F.log_softmax(tag_outputs, dim=1)\n",
     "\n",
     "        return tag_scores"
