--- a/6_Sentiment_Analysis_TensorFlow_LSTM.ipynb
+++ b/6_Sentiment_Analysis_TensorFlow_LSTM.ipynb
@@ -1,8 +1,12 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "# Sentiment Analysis with LSTM\n",
     "\n",
@@ -597,7 +601,7 @@
    ],
    "source": [
     "with graph.as_default():\n",
-    "    # Your basic LSTM cell\n",
+    "    # The basic LSTM cell\n",
     "    lstm = tf.nn.rnn_cell.BasicLSTMCell(lstm_size)\n",
     "\n",
     "    # Add dropout to the cell\n",
